[+]interview_java: jvm